# MyPloverDicts

./: .gitignore  Custom.json  Emoji.json  English 0 [Spelling].json  English 1 [Plain].json  English 2 [Extended].json  English 3 [Alternative].json  German 0 [Spelling].json  German 1 [Plain].json  German 2 [Extended].json  German 3 [Alternative].json  German 4 [Numbers].json  German 5 [Shorts].json  Names.json  REIHENFOLGE.txt  Scripting.json  Steno.json  Translation.json  Typing.json  User.json  plover.cfg
plugins/win/Python39/Scripts/: plover.cmd
plugins/win/Python39/Scripts/TestPlugin/: setup.cfg
plugins/win/Python39/Scripts/TestPlugin/dictionaries/: Scripting.json
