[metadata]
name = TestPlugin
keywords = plover plover_plugin TestPlugin

[options]
zip_safe = True
#setup_requires =
#  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev10

#packages = ...
#py_modules = ...

[options.entry_points]

plover.dictionary =
  Scripting = TestPlugin.dictionaries:Scripting

